tests/ui/parser/misspelled-keywords/static-mut.rs
static muta a: u8 = 0;
//~^ ERROR expected one of
//~| ERROR missing type for

fn main() {}
